# otus_python_dev_django_hws

./: .pylintrc  README.md  db.sqlite3  pyproject.toml  pytest.ini
.github/workflows/: pylint.yml  pytest.yml
config/: celery.py  settings.py  urls.py
store_app/: __init__.py  admin.py  forms.py  models.py  tasks.py  urls.py  views.py
store_app/management/commands/: generate_test_data.py
store_app/migrations/: 0001_initial.py  0002_product.py  0003_taskresultadmin_alter_product_description.py
store_app/templates/store_app/: base.html  category_create.html  category_delete.html  category_detail.html  category_edit.html  category_list.html  home.html  menu.html  product_create.html  product_delete.html  product_detail.html  product_edit.html  product_list.html
store_app/tests/: conftest.py
store_app/tests/categories/: test_category_forms.py  test_category_models.py  test_category_templates.py  test_category_views.py
store_app/tests/helpers/: helpers.py
store_app/tests/products/: test_product_forms.py  test_product_models.py  test_product_templates.py  test_product_views.py
